Resolved paginate overflow issue

--- a/Frontend/crowd-funding-frontend/src/Components/styles/paginate.module.css
+++ b/Frontend/crowd-funding-frontend/src/Components/styles/paginate.module.css
@@ -9,7 +9,7 @@
   /* padding: 0 48%; */
   margin: auto;
   width: 99%;
-  padding: 0 45%;
+  /* padding: 0 45%; */
   overflow: scroll;
 }
 
